--- a/src/CollectionTagButtonsComponantStyle.css
+++ b/src/CollectionTagButtonsComponantStyle.css
@@ -1,8 +1,4 @@
 .CollectionTag {
-  border: 4px solid #017575;
-  align-items: center;
-  justify-content: center;
-  font-size: 65%;
-  margin: 20px 100px 20px 100px;
-  float: left;
+  margin: 25px;
+  border: solid teal 5px;
 }
