--- a/src/HeaderComponantStyle.css
+++ b/src/HeaderComponantStyle.css
@@ -1,9 +1,10 @@
 .header {
-  background-color: #017575;
-  color: white;
-  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  background-color: teal;
   width: 100%;
-  padding: 25px;
-  box-sizing: border-box;
-  margin: 0;
+  height: 200px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 5px 13px rgba(0, 0, 0, 0.4);
 }
