--- a/src/PostComponantStyle.css
+++ b/src/PostComponantStyle.css
@@ -1,10 +1,7 @@
 .Post {
-  border: 4px solid #017575;
-  align-items: center;
-  justify-content: center;
-  font-size: 65%;
-  margin: 20px 200px 20px 200px;
-  float: left;
+  border: solid teal 5px;
+  padding: 10px;
+  margin: 25px;
 }
 
 .h3 {
